--- a/_data/main.yml
+++ b/_data/main.yml
@@ -4,6 +4,21 @@ title: "Kalendarz Adwentowy dla rodziny"
 titleshort: "przeżyj Adwent Rodzinny"
 description: "Jak przeżyć Adwent w rodzinie. Zadania i aktywności na każdy dzień adwentowy!"
 
+fb: "https://www.facebook.com/WRSwMAX"
+
 week_pl: "Tydzień, Poniedziałek, Wtorek, Środa, Czwartek, Piątek, Sobota, Niedziela"
 month_pl: "Miesiąc, Styczeń, Luty, Marzec, Kwiecień, Maj, Czerwiec, Lipiec, Sierpień, Wrzesień, Październik, Listopad, Grudzień"
 months_pl: "miesiąca, stycznia, lutego, marca, kwietnia, maja, czerwca, lipca, sierpnia, września, października, listopada, grudnia"
+
+titl: "Co to jest AdwentRodzinny.pl?"
+des1: "Jeśli przełom listopada i grudnia jest dla Ciebie czasem ciemności, przygnębienia i doła, to czas na nowo odkryć Adwent i jego rodzinny wymiar!"
+
+des2: "Na tej stronie codziennie rano czekać będzie na Ciebie propozycja rodzinnej aktywności oraz inspiracje i podpowiedzi jak ją wykonać, aby było ciekawie i radośnie."
+
+des3: "Wpadaj tu z rana od pierwszej niedzieli Adwentu, 29 listopada, albo zapisz się poniżej na newsletera, który będzie przypominajką dla zapominalskich."
+
+des4: "Daj się porwać Radości, a wtedy Święta rozbłysną światłem nie tylko choinki."
+
+dest: "Wspólnota Rodzin Świętego Maksymiliana w Gdyni"
+deso: "Jesteśmy grupą wierzących i praktykujących rodzin, działających we Wspólnocie rodzin św. Maksymiliana w Gdyni, którzy chcą pogłębiać swoją wiarę i wychowywać w niej swoje dzieci."
+desf: "Więcej o nas na naszej stronie."
