Modifications to main site

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -22,3 +22,4 @@ des4: "Daj się porwać Radości, a wtedy Święta rozbłysną światłem nie ty
 dest: "Wspólnota Rodzin Świętego Maksymiliana w Gdyni"
 deso: "Jesteśmy grupą wierzących i praktykujących rodzin, działających we Wspólnocie rodzin św. Maksymiliana w Gdyni, którzy chcą pogłębiać swoją wiarę i wychowywać w niej swoje dzieci."
 desf: "Więcej o nas na naszej stronie."
+desp: "Prosta polityka prywatności - wysyłamy tylko przypomnienia o adwencie!"
