--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ avatar: https://adwentrodzinny.pl/icon.png
 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: "G-1KPKWJTHP5"
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
