--- a/_data/main.yml
+++ b/_data/main.yml
@@ -11,7 +11,7 @@ month_pl: "Miesiąc, Styczeń, Luty, Marzec, Kwiecień, Maj, Czerwiec, Lipiec, S
 months_pl: "miesiąca, stycznia, lutego, marca, kwietnia, maja, czerwca, lipca, sierpnia, września, października, listopada, grudnia"
 
 titl: "Co to jest AdwentRodzinny.pl?"
-des1: "Jeśli przełom listopada i grudnia jest dla Ciebie czasem ciemności, przygnębienia i doła, to czas na nowo odkryć Adwent i jego rodzinny wymiar!"
+des1: "Jeśli przełom listopada i grudnia jest dla Ciebie okresem ciemności, przygnębienia i doła, to czas na nowo odkryć Adwent i jego rodzinny wymiar!"
 
 des2: "Na tej stronie codziennie rano czekać będzie na Ciebie propozycja rodzinnej aktywności oraz inspiracje i podpowiedzi jak ją wykonać, aby było ciekawie i radośnie."
 
@@ -21,5 +21,5 @@ des4: "Daj się porwać Radości, a wtedy Święta rozbłysną światłem nie ty
 
 dest: "Wspólnota Rodzin Świętego Maksymiliana w Gdyni"
 deso: "Jesteśmy grupą wierzących i praktykujących rodzin, działających we Wspólnocie rodzin św. Maksymiliana w Gdyni, którzy chcą pogłębiać swoją wiarę i wychowywać w niej swoje dzieci."
-desf: "Więcej o nas na naszej stronie."
+desf: "Więcej o nas na Facebooku."
 desp: "Prosta polityka prywatności - wysyłamy tylko przypomnienia o adwencie!"
