--- a/_data/main.yml
+++ b/_data/main.yml
@@ -23,3 +23,4 @@ dest: "Wspólnota Rodzin Świętego Maksymiliana w Gdyni"
 deso: "Jesteśmy grupą wierzących i praktykujących rodzin, działających we Wspólnocie rodzin św. Maksymiliana w Gdyni, którzy chcą pogłębiać swoją wiarę i wychowywać w niej swoje dzieci."
 desf: "Więcej o nas na Facebooku."
 desp: "Prosta polityka prywatności - wysyłamy tylko przypomnienia o adwencie!"
+desh: "Przypomnienia o adwentowych aktywnościach:"
