--- a/_data/main.yml
+++ b/_data/main.yml
@@ -24,3 +24,4 @@ deso: "Jesteśmy grupą wierzących i praktykujących rodzin, działających we 
 desf: "Więcej o nas na Facebooku."
 desp: "Prosta polityka prywatności - wysyłamy tylko przypomnienia o adwencie!"
 desh: "Przypomnienia o adwentowych aktywnościach:"
+dess: "O tej stronie"
