fix footer links

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -19,6 +19,8 @@ des3: "Wpadaj tu z rana od pierwszej niedzieli Adwentu, 28 listopada, albo zapis
 
 des4: "Daj się porwać Radości, a wtedy Święta rozbłysną światłem nie tylko choinki."
 
+des5: "Zacznij od wydrukowania [kolorowanki](/kolorowanka) i skomponowania [wieńca adwentowego](/wieniec)."
+
 dest: "Wspólnota Rodzin Świętego Maksymiliana w Gdyni"
 deso: "Jesteśmy grupą wierzących i praktykujących rodzin, działających we Wspólnocie rodzin św. Maksymiliana w Gdyni, którzy chcą pogłębiać swoją wiarę i wychowywać w niej swoje dzieci."
 desf: "Więcej o nas na Facebooku."
