--- a/_data/main.yml
+++ b/_data/main.yml
@@ -15,11 +15,9 @@ des1: "Jeśli przełom listopada i grudnia jest dla Ciebie okresem ciemności, p
 
 des2: "Na tej stronie codziennie rano czekać będzie na Ciebie propozycja rodzinnej aktywności oraz inspiracje i podpowiedzi jak ją wykonać, aby było ciekawie i radośnie."
 
-des3: "Wpadaj tu z rana od pierwszej niedzieli Adwentu, 28 listopada, albo zapisz się poniżej na newsletera, który będzie przypominajką dla zapominalskich."
+des3: "Wpadaj tu z rana od pierwszej niedzieli Adwentu (kiedy zapalisz pierwszą świeczkę [wieńca adwentowego](/wieniec)), albo zapisz się poniżej na newsletera, aby dostawać codziennie przypomnienie."
 
 des4: "Daj się porwać Radości, a wtedy Święta rozbłysną światłem nie tylko choinki."
-
-des5: "Zacznij od wydrukowania [kolorowanki](/kolorowanka) i skomponowania [wieńca adwentowego](/wieniec)."
 
 dest: "Wspólnota Rodzin Świętego Maksymiliana w Gdyni"
 deso: "Jesteśmy grupą wierzących i praktykujących rodzin, działających we Wspólnocie rodzin św. Maksymiliana w Gdyni, którzy chcą pogłębiać swoją wiarę i wychowywać w niej swoje dzieci."
