--- a/_data/main.yml
+++ b/_data/main.yml
@@ -17,7 +17,7 @@ des2: "Na tej stronie codziennie rano czekać będzie na Ciebie propozycja rodzi
 
 des3: "Wpadaj tu z rana od pierwszej niedzieli Adwentu (kiedy zapalisz pierwszą świeczkę [wieńca adwentowego](/wieniec)), albo zapisz się poniżej na newsletera, aby dostawać codziennie przypomnienie."
 
-des4: "Daj się porwać Radości, a wtedy Święta rozbłysną światłem nie tylko choinki."
+des4: "Daj się porwać Radości, a wtedy Święta rozbłysną światłem nie tylko choinki. A jeśli nie lubisz niespodzianek, [możesz zobaczyć pełną listę aktywności jakie przygotowaliśmy](/lista/)."
 
 dest: "Wspólnota Rodzin Świętego Maksymiliana w Gdyni"
 deso: "Jesteśmy grupą wierzących i praktykujących rodzin, działających we Wspólnocie rodzin św. Maksymiliana w Gdyni, którzy chcą pogłębiać swoją wiarę i wychowywać w niej swoje dzieci."
