--- a/_data/main.yml
+++ b/_data/main.yml
@@ -10,6 +10,10 @@ week_pl: "Tydzień, Poniedziałek, Wtorek, Środa, Czwartek, Piątek, Sobota, Ni
 month_pl: "Miesiąc, Styczeń, Luty, Marzec, Kwiecień, Maj, Czerwiec, Lipiec, Sierpień, Wrzesień, Październik, Listopad, Grudzień"
 months_pl: "miesiąca, stycznia, lutego, marca, kwietnia, maja, czerwca, lipca, sierpnia, września, października, listopada, grudnia"
 
+more: Chcesz wiedzieć więcej?
+lista: Pełna lista wszystkich aktywności na Adwent
+wieniec: Wieniec Adwentowy - jak przygotować?
+
 titl: "Co to jest AdwentRodzinny.pl?"
 des1: "Jeśli przełom listopada i grudnia jest dla Ciebie okresem ciemności, przygnębienia i doła, to czas na nowo odkryć Adwent i jego rodzinny wymiar!"
 
@@ -20,7 +24,7 @@ des3: "Wpadaj tu z rana od pierwszej niedzieli Adwentu (kiedy zapalisz pierwszą
 des4: "Daj się porwać Radości, a wtedy Święta rozbłysną światłem nie tylko choinki. A jeśli nie lubisz niespodzianek, [możesz zobaczyć pełną listę aktywności jakie przygotowaliśmy](/lista/)."
 
 dest: "Wspólnota Rodzin Świętego Maksymiliana w Gdyni"
-deso: "Jesteśmy grupą wierzących i praktykujących rodzin, działających we Wspólnocie rodzin św. Maksymiliana w Gdyni, którzy chcą pogłębiać swoją wiarę i wychowywać w niej swoje dzieci."
+deso: "[Jesteśmy grupą wierzących i praktykujących rodzin, działających we Wspólnocie rodzin św. Maksymiliana w Gdyni](https://wrsm.pl), którzy chcą pogłębiać swoją wiarę i wychowywać w niej swoje dzieci."
 desf: "Więcej o nas na Facebooku."
 desp: "Prosta polityka prywatności - wysyłamy tylko przypomnienia o adwencie!"
 desh: "Przypomnienia o adwentowych aktywnościach:"
